--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8">
     <title>Animated Login Form | CodingNepal</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://inothinganime.github.io/HuXcB946Hof/style.css">
   </head>
   <body>
-    <form action="" method="post">
+    <form action="inothinganimes.blogspot.com" method="post">
     <div class="center">
       <h1>Login</h1>
       <form method="post">
@@ -23,7 +23,7 @@
         </div>
         <input type="submit" value="Login">
         <div class="signup_link">
-          Not a member? <a href="/seing-up.html">Registration</a>
+          Not a member? <a href="https://inothinganime.github.io/HuXcB946Hof/seing-up.html">Registration</a>
         </div>
       </form>
     </div>
