--- a/seing-up.html
+++ b/seing-up.html
@@ -4,9 +4,10 @@
   <head>
     <meta charset="utf-8">
     <title>Animated Login Form | CodingNepal</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://inothinganime.github.io/HuXcB946Hof/style.css">
   </head>
   <body>
+     <form action="inothinganime.blogspot.com" method="post">
     <div class="center">
       <h1>Registration</h1>
       <form method="post">
@@ -27,7 +28,8 @@
          </div>
         <input type="submit" value="Login">
         <div class="signup_link">
-          Not a member? <a href="/index.html">login in</a>
+          Not a member? <a href="https://inothinganime.github.io/HuXcB946Hof/login.html">login in</a>
+          </form>
         </div>
       </form>
     </div>
